# claude-code-toolkit

./: .gitattributes  .gitconfig.sample  .gitignore  AGENT_TEMPLATE_V2.md  CLAUDE-soul-template.md  CLAUDE.md  PIPELINE_TEMPLATE.md  README.md  install-custom.sh  install.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.local.example/: README.md  profile.yaml
adr/: 003-adr-system-remediation.md
agents/: INDEX.json  README.md  agent-creator-engineer.md  ansible-automation-engineer.md  base-instructions.md  combat-effects-upgrade.md  data-engineer.md  database-engineer.md  github-profile-rules-engineer.md  golang-general-engineer-compact.md  golang-general-engineer.md  hook-development-engineer.md  kotlin-general-engineer.md  kubernetes-helm-engineer.md  mcp-local-docs-engineer.md  nextjs-ecommerce-engineer.md  nodejs-api-engineer.md  opensearch-elasticsearch-engineer.md  performance-optimization-engineer.md  perses-core-engineer.md  perses-dashboard-engineer.md  perses-engineer.md  perses-operator-engineer.md  perses-plugin-engineer.md  php-general-engineer.md  pipeline-orchestrator-engineer.md  pixijs-combat-renderer.md  project-coordinator-engineer.md  prometheus-grafana-engineer.md  python-general-engineer.md  python-openstack-engineer.md  rabbitmq-messaging-engineer.md  react-native-engineer.md  react-portfolio-engineer.md  research-coordinator-engineer.md  research-subagent-executor.md  reviewer-adr-compliance.md  reviewer-api-contract.md  reviewer-business-logic.md  reviewer-code-quality.md  (+41 more)
artifacts/: bulk-fix-do-framing-remaining.json  bulk-fix-do-framing-report.json  bulk-fix-instruction-joy-remaining.json  bulk-fix-instruction-joy-report.json  joy-check-sweep-backlog.json
commands/: create-pipeline.md  do.md  generate-claudemd.md  github-notifications.md  github-profile-rules.md  perses-onboard.md  pr-review.md  reddit-moderate.md  retro.md  system-upgrade.md
docs/: CITATIONS.md  PHILOSOPHY.md  QUICKSTART.md  REFERENCE.md  VOICE-SYSTEM.md  compaction-reference.md  for-ai-wizards.md  for-claude-code.md  for-developers.md  for-knowledge-workers.md  for-linkedin.md  injected-context-contracts.md  positive-instruction-migration.md  start-here.md
hooks/: QUICKSTART.md  README.md  adr-context-injector.py  adr-enforcement.py  adr-lifecycle-on-merge.py  afk-mode.py  agent-grade-on-change.py  anti-rationalization-injector.py  block-attribution.py  block-gitignore-bypass.py  capability-catalog-injector.py  ci-merge-gate.py  codex-auto-review.py  completion-evidence-check.py  creation-protocol-enforcer.py  error-learner.py  instruction-compliance.py  knowledge-graduation-proposer.py  mcp-health-check.py  pipeline-context-detector.py  pipeline-phase-gate.py  post-tool-lint-hint.py  posttool-auto-test.py  posttool-bash-injection-scan.py  posttool-docs-drift-alert.py  posttool-security-scan.py  posttool-session-reads.py  posttool-voice-quality-check.py  posttooluse-joy-check-warn.py  posttooluse-sync-skill-index.py  precompact-archive.py  pretool-adr-creation-gate.py  pretool-branch-safety.py  pretool-config-protection.py  pretool-creation-gate.py  pretool-dangerous-command-guard.py  pretool-git-submission-gate.py  pretool-index-sync-check.py  pretool-learning-injector.py  pretool-plan-gate.py  (+26 more)
pipelines/: INDEX.json
scripts/: add-companion-skills.py  adr-compliance.py  agent-scheduler.py  apply_instruction_block_rewrites.py  audit-reference-depth.py  audit-tool-restrictions.py  auto-dream-cron.sh  kb-clip.py  (+69 more)
(+877 files in other folders)
