[project]
name = "ai-overkill"
version = "1.0.0"
description = "Claude Code agents, skills, and hooks for automated development workflows"
requires-python = ">=3.10"

[project.optional-dependencies]
evals = [
    "anthropic>=0.40",
]
reddit = [
    "praw>=7.7",
    "python-dotenv>=1.0",
]
gemini = [
    "google-genai>=1.0",
]
quality = [
    "ruff>=0.8.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes - logical errors
    "F",
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # isort - import sorting
    "I",
    # flake8-bugbear - common bugs
    "B",
    # flake8-simplify - code simplification
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib (disabled: 490 existing violations, fix incrementally)
    # "PTH",
    # Ruff-specific rules
    "RUF",
]

ignore = [
    # Allow print statements in hooks/demo files (they're meant for output)
    "T201",
    # Allow broad exception catching in hooks (they need to be robust)
    "BLE001",
    # Allow assert in non-test files
    "S101",
    # Line too long (existing codebase uses 120 but some lines exceed)
    "E501",
    # f-string without placeholders (used intentionally in many places)
    "F541",
    # Undefined names (false positives in conditional imports and dynamic code)
    "F821",
    # Unused function arguments (hooks have required signatures)
    "ARG001",
    # Collapsible if statements (readability preference)
    "SIM102",
    # Unused variables (acceptable in hooks/scripts)
    "F841",
    # Ambiguous variable names (e, l, etc. are fine in context)
    "E741",
    # Implicit Optional (pre-3.10 style)
    "RUF013",
    # Ternary instead of if/else (readability preference)
    "SIM108",
    # Suppressible exception (contextlib.suppress preference)
    "SIM105",
    # Unnecessary concatenation (readability)
    "RUF005",
    # Import not at top (conditional imports are intentional)
    "E402",
    # Bare except (hooks need to catch everything)
    "E722",
    # Unused imports (conditional/template imports in generated code)
    "F401",
    # Redefined unused (fixture overrides in tests)
    "F811",
    # Loop variable unused (intentional iteration for counting)
    "B007",
    # raise without from in except (style preference)
    "B904",
    "B905",
    # Use dict.get instead of ternary (readability preference)
    "SIM116",
    # Membership test (readability preference)
    "SIM103",
    # any() instead of for loop (readability preference)
    "SIM110",
    # isinstance union (3.10+ only)
    "RUF021",
    # Explicit conversion flag (readability)
    "RUF010",
    # Unused variable in loop unpacking
    "RUF059",
    # .membership test
    "F601",
]

[tool.ruff.lint.per-file-ignores]
# Test files: allow print, assert, unused unpacked vars, temp files, unused args, long test strings
"**/tests/*.py" = ["T201", "S101", "RUF059", "SIM115", "ARG002", "B007", "RUF005"]
# Scripts are allowed to use print for user feedback
"**/scripts/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
